Sebi : Maj du css ecobio, maj des différentes pages et ajout du facet FIRST sur les header afin d'intégrer primefaces partout + suppression de JQUERY sur les pages

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Header.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Header.xhtml
@@ -1,35 +1,43 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"   
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      >
-        <ui:composition>
-            <head>
+      xmlns:p="http://primefaces.org/ui">
+
+    <ui:composition>
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <meta charset="utf-8"></meta>
                 <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
                 <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
                 <meta name="description" content=""></meta>
                 <meta name="author" content=""></meta>
                 <title>Bootstrap business-plate template </title>
+            </f:facet>
 
-                <!-- Bootstrap core CSS -->
-                <link href="./../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link> 
-                
-                <!-- Eco-bio CSS -->             
-                 <link href="./../assets/bootstrap/css/ecobio-style.css" rel="stylesheet"></link>   
+            <!-- Bootstrap core CSS -->
+            <link href="./../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link> 
 
-                <!-- CSS Implementing Plugins -->
-                <link rel="stylesheet" href="./../assets/custom/css/flexslider.css" type="text/css" media="screen"> </link>   	
-                <link rel="stylesheet" href="./../assets/custom/css/parallax-slider.css" type="text/css"></link>  
-                <link rel="stylesheet" href="./../assets/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css"></link>  
+            <!-- Eco-bio CSS -->             
+            <link href="./../assets/bootstrap/css/ecobio-style.css" rel="stylesheet"></link>   
 
-                <!-- Custom styles for this template -->
+            <!-- CSS Implementing Plugins -->
+            <link rel="stylesheet" href="./../assets/custom/css/flexslider.css" type="text/css" media="screen"> </link>   	
+            <link rel="stylesheet" href="./../assets/custom/css/parallax-slider.css" type="text/css"></link>  
+            <link rel="stylesheet" href="./../assets/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css"></link>  
 
-                <link href="./../assets/custom/css/business-plate.css" rel="stylesheet"></link>  
-                <link rel="shortcut icon" href="./../assets/custom/ico/favicon.ico"></link>  
-            </head>
+            <!-- Custom styles for this template -->
 
-        </ui:composition>
-  
+            <link href="./../assets/custom/css/business-plate.css" rel="stylesheet"></link>  
+            <link rel="shortcut icon" href="./../assets/custom/ico/favicon.ico"></link>  
+
+
+
+
+        </h:head>
+    </ui:composition>
+
 </html>
