--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageMonEspacePerso.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageMonEspacePerso.xhtml
@@ -51,7 +51,7 @@
                                                     <h:outputText value="" /><br></br> <br></br> 
                                                     <h:outputText value="Email: " />
                                                     <h:outputText value="" /><br></br><br></br>
-                                                     <h:commandButton value="Modifer vos informations personelles"/>
+                                                    <h:commandButton value="Modifer vos informations personelles"/>
                                                 </td>
                                                 <td id="tableauInfoPerso">
                                                     <h:outputText value="Rue: " />
@@ -65,7 +65,7 @@
                                             </tr>
 
                                         </table>
-                                       
+
                                     </h:form>
                                 </div>
 
@@ -101,36 +101,14 @@
                             </div><!--End tabs container-->
 
                         </div><!--End tabs-->
-
-
-
-
-                        <!--  <ul class="nav nav-tabs">
-                              <p:tabMenu activeIndex="2">
-                              <li class="active"><a href="#"><p:menuitem value="Overview" url="/ui/tabMenu.jsf" icon="ui-icon-star"/></a></li>
-                              <li><a href="#">Profile</a></li>
-                              <li><a href="#">Message  <li class="active"><a href="#">Mes informations</a></li>s</a></li> 
-                                </p:tabMenu>
-                        </ul> -->
-
-
                     </div>
-
-
-
-                    <hr></hr>
+                  <hr></hr>
                 </div>
-
-
-
-
                 <!-- </div> -->
-
-
-
-
-
+                <script type="text/javascript" src="../assets/custom/js/jquery-1.8.2.min.js"></script>
             </ui:define>
         </ui:composition>
     </h:body>
+
+
 </html>
