--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/FooterForIndex.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/FooterForIndex.xhtml
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <!-- JS Global Compulsory -->			
-            <script type="text/javascript" src="assets/custom/js/jquery-1.8.2.min.js"></script>
+           <!-- <script type="text/javascript" src="assets/custom/js/jquery-1.8.2.min.js"></script> -->
             <script type="text/javascript" src="assets/custom/js/modernizr.custom.js"></script>		
             <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>	
 
